# tic-tac-toe

./: CMakeLists.txt  README.md  cli-demo.asciinema  tic-tac-toe  view-compact  view-pretty
include/: game.hpp  game_fwd.hpp  view.hpp
src/: game.cpp  main.cpp  view_compact.cpp  view_pretty.cpp
